# libosmpbf

./: CMakeLists.txt  LICENSE.md  Makefile
example/: CMakeLists.txt  Makefile  example.cpp
include/: libosmpbf.h
src/: CMakeLists.txt  Makefile  libosmpbf.cpp
src/protobuf/: CMakeLists.txt  Makefile
